Fix spacing in Email preferences

--- a/src/PresentationalComponents/Email/email.scss
+++ b/src/PresentationalComponents/Email/email.scss
@@ -14,8 +14,6 @@
             // min and max width, because data lists
             min-width: 155px;
             max-width: 155px;
-
-            @include rem('padding-top', 22px);
         }
         .pf-c-data-list__item:last-of-type { border: 0; }
 
@@ -49,8 +47,17 @@
 
     .pref-u-bold { font-weight: var(--pf-global--FontWeight--bold); }
 
+    .pref-u-condensed {
+        padding-top: 8px !important;
+        padding-bottom: 0px;
+    }
+
     .pref-email__form-button {
         margin-right: 16px;
+    }
+
+    .pref-email__info-head {
+        display: block;
     }
 }
 
@@ -90,6 +97,11 @@
             .pf-c-data-list__cell:last-of-type {
                 padding-top: var(--pf-global--spacer--lg);
             }
+        }
+
+        .pref-u-condensed {
+            padding-top: 0px !important;
+            padding-bottom: 0px;
         }
     }
 }
